# dnd-emu

./: .gitignore  Cargo.toml  test.yaml
data/: armor.yaml  characters.yaml  classes.yaml  modifiers.yaml  races.yaml
src/: main.rs
