[package]
name = "rust_test"
version = "0.1.0"
authors = ["nukiebaba <relyk92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.7"
yaml-rust = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uom = "0.30.0"